# LLAMA

./: README583
benchmarks/SimpleMOC-kernel/src/cpu/: Makefile
benchmarks/XSBench/src/: Makefile
benchmarks/demo/: correct_output.txt  default.profraw  run-original.sh  run.sh  simple_calloc_freq.bc  simple_calloc_freq.c  simple_calloc_freq.prof.bc  simple_calloc_freq.profdata  simple_calloc_freq.profdata.bc  simple_calloc_freq_prof  viz.sh
benchmarks/matrix/matrix_dynamic_memory/: build.sh  matrix.bc  matrix.c  matrix.prof.bc  matrix_0  matrix_prof  run.sh  simple.bc  simple1.bc
benchmarks/matrix/matrix_dynamic_memory/llvm/: build.sh
benchmarks/simple_mem/: DUAL_NVM_DRAM.py  build.sh  default.profraw  new.py  run.sh  simple.bc  simple2.bc  simple3.bc  simple_0  simple_1000  simple_10000  simple_20000  simple_30000  simple_40000  simple_calloc  simple_calloc.bc  simple_calloc.c  simple_calloc.prof.bc  simple_calloc_freq.c  simple_calloc_prof  test.c  viz.sh
llvm/: CMakeLists.txt  build.sh  llama.cpp  llama_bfi.cpp  llama_old.cpp
llvm-original/: CMakeLists.txt  build.sh  llama-original.cpp
